tests/core/error/function-3.rq
# Use unknown xpath function
SELECT (fn:asdfqwertyuiop (?u) AS ?m) { }
